docs: consolidate wiki into MkDocs site with auto-sync workflow